Add header, list, images folder

--- a/index.html
+++ b/index.html
@@ -5,9 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Greetings Flashcards MemoryGame</title>
+    <title>Pets Flashcards MemoryGame</title>
 </head>
 <body>
-    <header>MemoryGame</header>
+    <header>Pets Cards</header>
+    <div class="board">
+     <ul class="boxes">
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+        <li class="box">
+            <img src="" alt="">
+        </li>
+     </ul>
+    </div>
 </body>
 </html>
