Add images to index page and add script file

--- a/index.html
+++ b/index.html
@@ -12,69 +12,71 @@
     <div class="board">
      <ul class="boxes">
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/cat.jpg" alt="cat">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/fish02.jpg" alt="rybka">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/rabbit.jpg" alt="rabbit">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/dog02.jpg" alt="sabaka">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/budgie.jpg" alt="budgie">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/turtle.jpg" alt="turtle">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/hamster02.jpg" alt="hamiak">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/dog.jpg" alt="dog">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/guineapig02.jpg" alt="marskaia svinka">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/turtle02.jpg" alt="charapaxa">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/cat02.jpg" alt="kocik">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/hamster.jpg" alt="hamster">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/rabbit02.jpg" alt="trus">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/guineapig.jpg" alt="guinea pig">
         </li>
         <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/budgie02.jpg" alt="papuhajchyk">
         </li>
         <li class="box">
-            <img src="" alt="">
-        </li>
-        <li class="box">
-            <img src="" alt="">
-        </li>
-        <li class="box">
-            <img src="" alt="">
-        </li>
-        <li class="box">
-            <img src="" alt="">
-        </li>
-        <li class="box">
-            <img src="" alt="">
-        </li>
-        <li class="box">
-            <img src="" alt="">
+            <img src="assets/images/green.jpg" alt="green box">
+            <img src="assets/images/fish.jpg" alt="fish">
         </li>
      </ul>
     </div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
