Add class to back and front view of the cards

--- a/index.html
+++ b/index.html
@@ -12,68 +12,132 @@
     <div class="board">
      <ul class="boxes">
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/cat.jpg" alt="cat">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/cat.jpg" alt="cat">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/fish02.jpg" alt="rybka">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/fish02.jpg" alt="rybka">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/rabbit.jpg" alt="rabbit">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/rabbit.jpg" alt="rabbit">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/dog02.jpg" alt="sabaka">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/dog02.jpg" alt="sabaka">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/budgie.jpg" alt="budgie">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgie.jpg" alt="budgie">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/turtle.jpg" alt="turtle">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/turtle.jpg" alt="turtle">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/hamster02.jpg" alt="hamiak">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/hamster02.jpg" alt="hamiak">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/dog.jpg" alt="dog">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/dog.jpg" alt="dog">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/guineapig02.jpg" alt="marskaia svinka">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/guineapig02.jpg" alt="marskaia svinka">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/turtle02.jpg" alt="charapaxa">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/turtle02.jpg" alt="charapaxa">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/cat02.jpg" alt="kocik">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/cat02.jpg" alt="kocik">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/hamster.jpg" alt="hamster">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/hamster.jpg" alt="hamster">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/rabbit02.jpg" alt="trus">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/rabbit02.jpg" alt="trus">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/guineapig.jpg" alt="guinea pig">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/guineapig.jpg" alt="guinea pig">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/budgie02.jpg" alt="papuhajchyk">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgie02.jpg" alt="papuhajchyk">
+            </div>
         </li>
         <li class="box">
-            <img src="assets/images/green.jpg" alt="green box">
-            <img src="assets/images/fish.jpg" alt="fish">
+            <div class ="view green">
+                <img src="assets/images/green.jpg" alt="green box">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/fish.jpg" alt="fish">
+            </div>
         </li>
      </ul>
     </div>
