Add function for matching cards

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/5802b95eec.js" crossorigin="anonymous"></script>
     <title>Pets Flashcards MemoryGame</title>
 </head>
 <body>
-    <header>Pets Cards</header>
-    <div class="board">
+    <!-- header -->
+    <header>
+        <h1>Pets Cards</h1>
+    </header>
+    <!-- game area -->
      <ul class="boxes">
         <li class="box">
             <div class ="view green">
@@ -141,6 +145,7 @@
         </li>
      </ul>
     </div>
+    
     <script src="assets/js/script.js"></script>
 </body>
 </html>
