--- a/index.html
+++ b/index.html
@@ -14,137 +14,58 @@
         <h1>Pets Cards</h1>
     </header>
     <!-- game area -->
-     <ul class="boxes">
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
+     <div class="boxes">
+        <div class="box">
+            <div class ="view back">
+                <img src="assets/images/budgie.jpg" alt="budgie">
+            </div>
+            <div class ="view front">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
             </div>
             <div class ="view back">
                 <img src="assets/images/cat.jpg" alt="cat">
             </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/fish02.jpg" alt="rybka">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/rabbit.jpg" alt="rabbit">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/dog02.jpg" alt="sabaka">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/budgie.jpg" alt="budgie">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/turtle.jpg" alt="turtle">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/hamster02.jpg" alt="hamiak">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
+            <div class ="view front">
+                <img src="assets/images/catbel.jpg" alt="kocik">
             </div>
             <div class ="view back">
                 <img src="assets/images/dog.jpg" alt="dog">
             </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/guineapig02.jpg" alt="marskaia svinka">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/turtle02.jpg" alt="charapaxa">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/cat02.jpg" alt="kocik">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/hamster.jpg" alt="hamster">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/rabbit02.jpg" alt="trus">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/guineapig.jpg" alt="guinea pig">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/budgie02.jpg" alt="papuhajchyk">
-            </div>
-        </li>
-        <li class="box">
-            <div class ="view green">
-                <img src="assets/images/green.jpg" alt="green box">
+            <div class ="view front">
+                <img src="assets/images/dogbel.jpg" alt="sabaka">
             </div>
             <div class ="view back">
                 <img src="assets/images/fish.jpg" alt="fish">
             </div>
-        </li>
-     </ul>
-    </div>
+            <div class ="view front">
+                <img src="assets/images/fishbel.jpg" alt="rybka">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/guineapig.jpg" alt="guinea pig">
+            </div>
+            <div class ="view front">
+                <img src="assets/images/guineapigbel.jpg" alt="marskaia svinka">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/hamster.jpg" alt="hamster">
+            </div>
+            <div class ="view front">
+                <img src="assets/images/hamsterbel.jpg" alt="hamiak">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/rabbit.jpg" alt="rabbit">
+            </div>
+            <div class ="view front">
+                <img src="assets/images/rabbitbel.jpg" alt="trus">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/turtle.jpg" alt="turtle">
+            </div>
+            <div class ="view front">
+                <img src="assets/images/turtlebel.jpg" alt="charapaha">
+            </div>
+        </div>
+     </div>   
     
     <script src="assets/js/script.js"></script>
 </body>
