--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- game area -->
     <div class="board">
         <ul class="cards">
-            <li class="card">
+            <li class="card" data-animal="budgie">
                 <div class="view front">
                     <img src="assets/images/question.jpg" alt="question">
                 </div>
@@ -26,7 +26,7 @@
                     <img src="assets/images/budgie.jpg" alt="budgie">
                 </div>
             </li>
-            <li class="card">
+            <li class="card" data-animal="cat">
                 <div class="view front">
                     <img src="assets/images/question.jpg" alt="question">
                 </div>
@@ -34,7 +34,7 @@
                     <img src="assets/images/catbel.jpg" alt="kocik">
                 </div>
             </li>
-            <li class="card">
+            <li class="card" data-animal="budgie">
                 <div class="view front">
                     <img src="assets/images/question.jpg" alt="question">
                 </div>
@@ -42,7 +42,7 @@
                     <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
                 </div>
             </li>
-            <li class="card">
+            <li class="card" data-animal="cat">
                 <div class="view front">
                     <img src="assets/images/question.jpg" alt="question">
                 </div>
