All delete and rewrite

--- a/index.html
+++ b/index.html
@@ -17,42 +17,134 @@
     </header>
     <!-- game area -->
     <div class="board">
-        <ul class="cards">
-            <li class="card" data-animal="budgie">
-                <div class="view front">
-                    <img src="assets/images/question.jpg" alt="question">
-                </div>
-                <div class="view back">
-                    <img src="assets/images/budgie.jpg" alt="budgie">
-                </div>
-            </li>
-            <li class="card" data-animal="cat">
-                <div class="view front">
-                    <img src="assets/images/question.jpg" alt="question">
-                </div>
-                <div class="view back">
-                    <img src="assets/images/catbel.jpg" alt="kocik">
-                </div>
-            </li>
-            <li class="card" data-animal="budgie">
-                <div class="view front">
-                    <img src="assets/images/question.jpg" alt="question">
-                </div>
-                <div class="view back">
-                    <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
-                </div>
-            </li>
-            <li class="card" data-animal="cat">
-                <div class="view front">
-                    <img src="assets/images/question.jpg" alt="question">
-                </div>
-                <div class="view back">
-                    <img src="assets/images/cat.jpg" alt="cat">
-                </div>
-            </li>
-            
-        </ul>
-        
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgie.jpg" alt="budgie">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/cat.jpg" alt="cat">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>                      
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
+        <div class="card">
+            <div class ="view front">
+                <img src="assets/images/question.jpg" alt="question">
+            </div>
+            <div class ="view back">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            </div>
+        </div>           
     </div>
 
     <script src="assets/js/script.js"></script>
