--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <h1>Pets Cards</h1>
     </header>
     <!-- game area -->
-    <div class="board">
+    <div class="wrap"></div>
+       <div class="board">
         <div class="card">
             <div class ="view front">
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/hamster.jpg" alt="hamster">
             </div>
         </div>
         <div class="card">
@@ -30,7 +31,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/guineapig.jpg" alt="guinea pig">
             </div>
         </div>           
         <div class="card">
@@ -46,7 +47,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/guineapigbel.jpg" alt="marskaia svinka">
             </div>
         </div>           
         <div class="card">
@@ -54,7 +55,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/dog.jpg" alt="dog">
             </div>
         </div>           
         <div class="card">
@@ -62,7 +63,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/rabbit.jpg" alt="rabbit">
             </div>
         </div>           
         <div class="card">
@@ -70,7 +71,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/dogbel.jpg" alt="sabaka">
             </div>
         </div>           
         <div class="card">
@@ -78,7 +79,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/fish.jpg" alt="fish">
             </div>
         </div>           
         <div class="card">
@@ -86,7 +87,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/turtlebel.jpg" alt="charapaha">
             </div>
         </div>           
         <div class="card">
@@ -110,7 +111,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/rabbitbel.jpg" alt="trus">
             </div>
         </div>           
         <div class="card">
@@ -118,7 +119,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/catbel.jpg" alt="kocik">
             </div>
         </div>           
         <div class="card">
@@ -126,7 +127,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/hamsterbel.jpg" alt="hamiak">
             </div>
         </div>                      
         <div class="card">
@@ -134,7 +135,7 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/turtle.jpg" alt="turtle">
             </div>
         </div>           
         <div class="card">
@@ -142,10 +143,11 @@
                 <img src="assets/images/question.jpg" alt="question">
             </div>
             <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+                <img src="assets/images/fishbel.jpg" alt="rybka">
             </div>
-        </div>           
-    </div>
+        </div>
+      </div>           
+    
 
     <script src="assets/js/script.js"></script>
 </body>
